--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
+    "@react-navigation/stack": "^7.4.4",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.11.0",
+    "json-server": "^1.0.0-beta.3",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "react-native-gesture-handler": "^2.26.0",
+    "react-native-gesture-handler": "^2.27.2",
     "react-native-image-picker": "^8.2.1",
     "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "^5.5.0",
-    "react-native-screens": "^4.11.1",
-    "react-native-sound": "^0.12.0"
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
+    "react-native-sound": "^0.12.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
